fixed sql highlighting in pre tag

--- a/src/main/webapp/partials/sampleSqls.html
+++ b/src/main/webapp/partials/sampleSqls.html
@@ -1,4 +1,4 @@
-<pre class="prettyprint linenums">
+<pre class="prettyprint" data-ng-non-bindable>
 -- Step 1
 -- create employee table
 create table employee ( 
